Add Query Endpoint for Pagination
